--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  position: absolute;
+  width: 100vw;
 }
 
 .App-logo {
@@ -19,4 +21,8 @@
 
 .App-link {
   color: #09d3ac;
+}
+.nopadding {
+  padding: 0 !important;
+  margin: 0 !important;
 }
