--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -8,6 +9,83 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New"
     monospace;
+}
+@font-face {
+  font-family: 'GilroyRegular';
+  src: URL('/font/Gilroy-Regular.ttf') format('truetype');
+}
+
+.Header-container{
+  color: #000000;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 10px;
+}
+
+.Header-logo{
+  max-width: 65px;
+  max-height: 41px;
+  float: left;
+}
+.Header-logo-part{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.Header-account{
+  margin-left: auto;
+  margin-right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+}
+.MainMenu-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #4F4F4F;
+  padding-left: 30px;
+  min-height: 100vh;
+}
+
+.MainMenu-item-title{
+  color: #ffffff;
+  font-size: 20px;
+  padding: 20px 20px 15px 0px;
+  font-weight: bold;
+}
+.MainMenu-icon{
+  margin: auto;
+  margin-left: 0;
+  margin-right: 20px;
+  width: 30px;
+  text-align: center;
+}
+.MainMenu-item{
+  color: #ffffff;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  font-size: 16px;
+  padding: 12px 20px 12px 0px;
+}
+
+.MainMenuItemActive{
+  background-color: #333333;
+  color: #ffffff;
+}
+.MainMenuIconActive{
+  color: #F2994A;
+}
+
+.Path-text{
+  color: #000000;
+  font-size: 14px;
+  float: left;
 }
