--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family:  'Gilroy-Light',-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,8 +13,12 @@ code {
     monospace;
 }
 @font-face {
-  font-family: 'GilroyRegular';
-  src: URL('/font/Gilroy-Regular.ttf') format('truetype');
+  font-family: 'Gilroy-Light';
+  src: URL('/font/SVN-Gilroy Light.otf') format('opentype');
+}
+@font-face {
+  font-family: 'Gilroy-Bold';
+  src: URL('/font/SVN-Gilroy Bold.otf') format('opentype');
 }
 
 .Header-container{
@@ -23,7 +27,7 @@ code {
   flex-direction: row;
   align-items: center;
   background-color: #ffffff;
-  padding: 10px 15px 10px 15px;
+  padding: 11px 24px;
 }
 .Header-logo{
   max-width: 65px;
@@ -49,22 +53,22 @@ code {
   flex-direction: column;
   align-items: flex-start;
   background-color: #4F4F4F;
-  padding-left: 30px;
   height: 100%;
 }
 
+.MainMenu-container nav{
+  width: 100%;
+}
+
 .MainMenu-item-title{
+  font-family: 'Gilroy-Bold';
   color: #ffffff;
   font-size: 20px;
-  padding: 20px 20px 15px 0px;
-  font-weight: bold;
+  text-transform: uppercase;
+  padding: 12px 0 12px 20px;
 }
 .MainMenu-icon{
-  margin: auto;
-  margin-left: 0;
-  margin-right: 13px;
-  width: 30px;
-  text-align: center;
+  margin-right: 17px;
 }
 .MainMenu-item{
   color: #ffffff;
@@ -72,7 +76,16 @@ code {
   align-items: flex-start;
   flex-direction: row;
   font-size: 16px;
-  padding: 12px 20px 12px 0px;
+  padding: 12px 0 12px 20px;
+  cursor: pointer;  
+  width: 100%;
+}
+.MainMenu-item:hover{
+  background-color: #333333;
+  color: #ffffff;
+}
+.MainMenu-item:hover .MainMenu-icon{
+  color: #F2994A;
 }
 
 .MainMenuItemActive{
