--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@ code {
   border: 1px solid #828282;
   box-sizing: border-box;
   background-color: #ffffff;
-  padding: 13px 30px;
+  padding: 13px;
 }
 .InputContainer{
   display: flex;
@@ -194,6 +194,9 @@ code {
   height: 38px !important;
   border: 1px solid #333 !important;
 }
+.ant-modal-body{
+  padding-left: 10px !important;
+}
 .StatisticLine{
   width: 100%;
   height: 1px;
@@ -231,4 +234,36 @@ code {
 }
 .ant-calendar-range-picker-input{
   font-size: 16px !important;
+}
+.normal-button{
+  border: 1px solid #333333;
+  box-sizing: border-box;
+  border-radius: 0px;
+  background-color: #ffffff;
+  color: #000000;
+  width: fit-content;
+  padding: 11px 18px;
+}
+.cancel-button{
+  border: 1px solid #333333;
+  box-sizing: border-box;
+  border-radius: 0px;
+  color: #ffffff;
+  background-color: #333333;
+  font-family: Gilroy-Bold;
+  padding: 11px 25px;
+}
+.ok-button{
+  border: 1px solid #F2994A;
+  box-sizing: border-box;
+  border-radius: 0px;
+  color: #ffffff;
+  background-color: #F2994A;
+  font-family: Gilroy-Bold;
+  padding: 11px 25px;
+}
+.row-content{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
