--- a/src/index.css
+++ b/src/index.css
@@ -285,3 +285,37 @@ code {
   box-sizing: border-box;
   background-color: #00000000;
 }
+.employee-create-btn{
+  background-color: #12CBC4;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Gilroy-Bold;
+  font-size: 16px;
+  color: white;
+  padding: 10px 1rem;
+  width: 122px;
+  margin-left: auto;
+  cursor: pointer;
+  margin-bottom: 13px;
+}
+.ant-modal-content{
+  border-radius: 0 !important;
+}
+.ant-modal-confirm .ant-modal-body{
+  padding: 24px !important;
+}
+.ant-btn{
+  border-radius: 0 !important;
+  font-family: Gilroy-Bold !important;
+  padding: 11px 25px !important;
+  color: #fff !important;
+  height: auto !important;
+  background-color: #333 !important;
+  border: none !important;
+}
+.ant-btn-primary{
+  background-color: #F2994A !important;
+  border: none !important;
+}
