--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -2,9 +2,10 @@
   text-align: center;
   position: absolute;
   width: 100%;
-  background-color:#C4C4C4
 }
-
+::-webkit-scrollbar {
+  display: none;
+}
 .App-logo {
   height: 40vmin;
 }
