[u] update UI when uploading file (no api POST event handling yet)

--- a/src/index.css
+++ b/src/index.css
@@ -331,3 +331,7 @@ code {
   background-color: #F2994A !important;
   border: none !important;
 }
+.hidden-input{
+  transform: scale(0);
+  position: absolute;
+}
