--- a/src/index.css
+++ b/src/index.css
@@ -352,3 +352,60 @@ code {
   background: white !important;
   opacity: 80% !important;
 }
+.card-wrapper{
+  width: 49rem;
+  height: 20rem;
+  background-color: white;
+  border-radius: 0.5rem;
+  display: flex;
+}
+.card-section-one{
+  width: 47%;
+  height: 100%;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+.card-section-two{
+  height: 100%;
+  width: 53%;
+  border-radius: 0 0.5rem 0.5rem 0;
+  border-left: 2px solid #C7CED3;
+}
+.content-center{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.login-form-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start
+}
+.login-title{
+  font-size: 1.25rem;
+  font-family: 'Gilroy-Bold';
+  margin-bottom: 1.125rem;
+}
+.login-separator{
+  width: 20rem;
+  height: 1px;
+  background-color:#C7CED3;
+  margin-bottom: 1.125rem;
+}
+.login-button{
+  width: 9rem;
+  height: 2.375rem;
+  color: white;
+  background-color: #F2994A;
+  font-family: 'Gilroy-Bold';
+  font-size: 1rem;
+  border: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.login-button-loading{
+  opacity: 50% !important;
+}
